--- a/ToDoListTask/ToDoListTask.csproj
+++ b/ToDoListTask/ToDoListTask.csproj
@@ -14,6 +14,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="fluentValidation" Version="12.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
